fixed spacing mobile expr content

--- a/style.css
+++ b/style.css
@@ -641,6 +641,7 @@ html {
         margin-left: -7.8em;
     }
     .content h3 {
+        padding-top: 0.3em;
         margin-left: -6.3em;
     }
     /* WORK */
